--- a/cankiet/templates/cankiet/canteens.html
+++ b/cankiet/templates/cankiet/canteens.html
@@ -9,6 +9,7 @@
       
     <link rel="stylesheet" href="{% static 'css/canteen.css'%}">
     <title>canteen</title>
+    <link rel="icon" href="{% static 'images/cankiet_logo.png' %}">
 </head>
 <body>
     <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
