--- a/cankiet/templates/cankiet/confirmation.html
+++ b/cankiet/templates/cankiet/confirmation.html
@@ -41,8 +41,8 @@
         </table>
       </div>
       <div class="text-center mt-4">
-        <a href="/" class="btn btn-success">Go to Homepage</a>
-        <a href="/orders" class="btn btn-secondary">View Orders</a>
+        <a href="{% url 'index2' %}" class="btn btn-success">Go to Homepage</a>
+        <a href="{% url 'orders' %}" class="btn btn-secondary">View Orders</a>
       </div>
     </div>
   </div>
