--- a/cankiet/templates/cankiet/index2.html
+++ b/cankiet/templates/cankiet/index2.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'css/zerogrid.css'%}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/loader.css'%}">
     <link rel="stylesheet" href="{% static 'css/style.css'%}">
+    <link rel="icon" href="{% static 'images/cankiet_logo.png' %}">
 </head>
 <body>
 <!--Loader-->
