--- a/cankiet/templates/cankiet/menu.html
+++ b/cankiet/templates/cankiet/menu.html
@@ -26,7 +26,7 @@
     <div class="navbar">
         <span>Welcome, {{ request.session.user.name }}!</span>
     </div>
-    <h1>Menu - {{ canteen.c_name }}</h1>
+    <h1>Your Recent Orders</h1>
     <div id="item-container">
         {% for item in items %}
             <div class="item-card">
