--- a/cankiet/templates/cankiet/confirmation.html
+++ b/cankiet/templates/cankiet/confirmation.html
@@ -22,7 +22,7 @@
         <table class="table table-bordered">
           <tbody>
             <tr>
-              <th>Transaction ID</th>
+              <th>Order ID</th>
               <td>{{o_no}}</td>
             </tr>
             <tr>
@@ -34,8 +34,8 @@
                 <td>{{date}}</td>
             </tr>
             <tr>
-              <th>Status</th>
-              <td>{{order.status}}</td>
+              <th>Transaction ID</th>
+              <td>{{tr_id}}</td>
             </tr>
           </tbody>
         </table>
