--- a/static/css/canteen.css
+++ b/static/css/canteen.css
@@ -3,7 +3,7 @@
     flex-wrap: wrap;
     flex-direction: row;
 }
-.container{
+.container-can{
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
