--- a/cankiet/templates/cankiet/canteens.html
+++ b/cankiet/templates/cankiet/canteens.html
@@ -12,6 +12,33 @@
     <link rel="icon" href="{% static 'images/cankiet_logo.png' %}">
 </head>
 <body>
+      <!-- Navigation Bar -->
+    <nav class="navbar navbar-expand-lg navbar-dark text-light bg-dark fixed-top">
+        <div class="container">
+            <a class="navbar-brand" href="#"><img src="{% static 'images/cankiet_logo.png' %}"  height="60px" alt="logo" class="img-responsive"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item mx-4">
+                        <h6>{{request.session.user.name }} &nbsp; {{request.session.user.u_id}}</h6>
+                    </li>
+                    <li class="nav-item mx-4">
+                        <a class="" href="#"><h6 class="text-light">home</h6></a>
+                    </li>
+                    
+                    <li class="nav-item">
+                        <a class="btn btn-light text-warm" href="#">Logout</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+
+
+
     <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active" data-bs-interval="2000">
@@ -33,9 +60,10 @@
           <span class="visually-hidden">Next</span>
         </button>
     </div>
-    <div class="maincontainer m-3 p-3  d-flex justify-content-center ">
-        <div class="container">
-            <div class="row mx-auto">
+    <div class="maincontainer m-3 p-3 mt-5 d-flex justify-content-center ">
+        <div class="container mt-5">
+            <div class="row mt-5 mx-auto">
+              <h2 class="text-center fw-bolder text-light">Choose Any canteen of Our college</h2>
 
                 {% for can in canteen %}
             
@@ -43,7 +71,7 @@
                 <div class="col-sm-4">
                 <!-- Card -->
                 <div class="card card-custom">
-                    <img src="https://via.placeholder.com/400x200" class="card-img-top" alt="Card image">
+                    <img src="{% static 'images/image1.jpg'%}" class="card-img-top" alt="Card image">
                     <div class="card-body">
                         <h5 class="card-title">{{can.c_name}}</h5>
                         <a href="{% url 'food' can.c_no %}" class="btn btn-custom">See menu</a>
