--- a/cankiet/templates/cankiet/orders.html
+++ b/cankiet/templates/cankiet/orders.html
@@ -2,9 +2,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>{{canteen.c_name}} | KIET</title>
+    <title>{{canteen.c_name}}| Transactions @ cankiet</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     {% comment %} <link rel="stylesheet" href="styles.css"> {% endcomment %}
+    <link rel="icon" href="{% static 'images/cankiet_logo.png'%}">
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
     <style>
         .navbar {
@@ -23,6 +24,9 @@
             border-radius: 5px;
             background-color: #f9f9f9;
         }
+        .btn-2{
+          background-color: orange;
+        }
     </style>
 </head>
 <body>
@@ -30,20 +34,21 @@
       <nav class="navbar navbar-expand-lg navbar-light text-light bg-dark fixed-top">
         <div class="container">
             <a class="navbar-brand" href="#"><img src="{% static 'images/cankiet_logo.png' %}"  height="60px" alt="logo" class="img-responsive"></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <h3 class="text-light"> Your Recent Orders</h3>
+            <button class="navbar-toggler bg-secondary" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item mx-4 ">
+                    <li class="nav-item mb-0 me-4 ">
                         <h6>{{request.session.user.name }} &nbsp; {{request.session.user.u_id}}</h6>
                     </li>
-                    <li class="nav-item mx-4">
+                    <li class="nav-item mb-0 me-4">
                         <a class="" href="#"><h6 class="text-light">home</h6></a>
                     </li>
                     
-                    <li class="nav-item">
-                        <a class="btn btn-light text-warm" href="#">Logout</a>
+                    <li class="nav-item mb-0 mt-0">
+                        <a class="btn btn-light text-warm" href="{% url 'logout'%}">Logout</a>
                     </li>
                 </ul>
             </div>
@@ -51,21 +56,30 @@
     </nav> 
 
 
-  <div class="container mt-5">
-    <div class="row mt-5">
+  <div class="container ">
+    <div class="row ">
     <h1 class="mt-5">Your Recent Orders</h1>
-        {% for item in items %}
-            <div class="item-card shadow">
-                <img src="{{item.i_image.url}}" height="40px" alt="">
-                <h2>{{ item.item }}</h2>
-                <p><strong>Price:</strong> ₹{{ item.price }}</p>
+        {% for ord in order %}
+            <div class="item-card  shadow">
+              <div class="row">
+                <div class="col col-md-3 col-sm-1 d-flex">
+                <img src="{{ord.item.i_image.url}}" class="shadow" height="80px" alt="">
+                <h4 class="ms-2">{{ ord.item.item }}</h4>
+                </div>
+                <div class="col col-md-3 col-sm-1">
+                <p class=""><strong>Amount:</strong> ₹{{ ord.total_amount }}<br> <strong>Quantity:</strong> {{ ord.quantity }} piece</p>
+                </div>
+                <div class="col col-md-3 col-sm-1">
+                <p class=""><strong>Status:</strong> {{ord.status}} <br> <strong>From Canteen:</strong>{{ord.c_no.c_name}} <br><strong>Date:</strong>{{ord.o_date}}</p>
+                </div>
+                <div class="col col-md-3 col-sm-1 text-end">
                 <form method="post" action="">
                     {% csrf_token %}
-                    <input type="hidden" name="i_no" value="{{ item.i_no }}">
-                    <label for="quantity_{{ item.i_no }}">Quantity:</label>
-                    <input type="number" id="quantity_{{ item.i_no }}" name="quantity" min="1" value="1" required>
-                    <button type="submit" class="btn btn-success">View Details</button>
+                    <input type="hidden" name="i_no" value="">
+                    <button type="submit" class="btn btn-2 btn-warning text-light ms-4 shadow ">Repeat Order</button>
                 </form>
+                </div>
+              </div>
             </div>
         {% endfor %}
     </div>
