--- a/cankiet/templates/cankiet/cart.html
+++ b/cankiet/templates/cankiet/cart.html
@@ -50,7 +50,7 @@
   </div>
 
     <div class="container my-5">
-      <form method="post" action="{% url 'payment' canteen.c_no %}">
+      
         {% csrf_token %}
         <h1 class="text-center mb-4">Your Cart</h1>
         <div class="row">
@@ -78,9 +78,8 @@
         <!-- Footer buttons -->
         <div class="d-flex justify-content-between mt-4">
             <button class="btn btn-outline-primary">Add more to Cart</button>
-            <button type="submit" class="btn btn-danger">Proceed to Payment</button>
+            <button id="rzp-button1" class="btn btn-danger">Proceed to Payment</button>
         </div>
-      </form>
     </div>
 
     <!--FOOTER-->
@@ -152,6 +151,80 @@
 
 
     <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    
+    
+    
+<script src="https://checkout.razorpay.com/v1/checkout.js"></script>
+<script>
+  document.getElementById("rzp-button1").addEventListener
+  ("click",async function(){
+    let response=await fetch(`/cankiet/{{canteen.c_no}}/pay/`,{
+    method:"POST",
+    headers: {
+        "Content-Type": "application/x-www-form-urlencoded",
+        "X-CSRFToken": "{{ csrf_token }}"
+        },
+         body: new URLSearchParams({
+          "i_no": "{{ items.i_no }}",
+          "quantity": "{{ quantity }}"
+        })
+    });
+  let data=await response.json()
+  var options = {
+    "key": data.razorpay_key_id, // Enter the Key ID generated from the Dashboard
+    "amount": data.amount, // Amount is in currency subunits. Default currency is INR. Hence, 50000 refers to 50000 paise
+    "currency": "INR",
+    "name": "CanKiet",
+    "description": "Test Transaction",
+    
+    "order_id": data.order_id, //This is a sample Order ID. Pass the `id` obtained in the response of Step 1
+    "callback_url":data.razorpay_callback_url,
+    "prefill": {
+        "name": "Nilesh Agrahari",
+        "email": "nilesh.2426mca524@kiet.edu",
+        "contact": "9450874897"
+    },
+    "notes": {
+        "address": "Razorpay Corporate Office"
+    },
+    "theme": {
+        "color": "#3399cc"
+    }
+};
+var rzp1 = new Razorpay(options);
+
+    rzp1.open();
+    // e.preventDefault(); 
+})
+</script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 </html>
+
+    {% comment %} var options = {
+        "key": "YOUR_KEY_ID", // Enter the Key ID generated from the Dashboard
+        "amount": "50000", // Amount is in currency subunits. Default currency is INR. Hence, 50000 refers to 50000 paise
+        "currency": "INR",
+        "name": "Acme Corp",
+        "description": "Test Transaction",
+        "image": "https://example.com/your_logo",
+        "order_id": "order_IluGWxBm9U8zJ8", //This is a sample Order ID. Pass the `id` obtained in the response of Step 1
+        "callback_url": "https://eneqd3r9zrjok.x.pipedream.net/",
+        "prefill": {
+            "name": "Gaurav Kumar",
+            "email": "gaurav.kumar@example.com",
+            "contact": "9000090000"
+        },
+        "notes": {
+            "address": "Razorpay Corporate Office"
+        },
+        "theme": {
+            "color": "#3399cc"
+        }
+    };
+    var rzp1 = new Razorpay(options);
+    document.getElementById('rzp-button1').onclick = function(e){
+        rzp1.open();
+        e.preventDefault();
+    } {% endcomment %}
